Fix contact layout on small resolutions

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -11,10 +11,11 @@
 .contact-content {
    background-color:var(--tertiary-color);
    border:1px solid transparent;
+   position: relative;
 }
 
 .contact-content #hero {
-   background: url('../images/IMG_20200919_105758.jpg') no-repeat center center;
+   background: url('../images/IMG_20200919_105758.jpg') no-repeat center right;
    background-size: cover;
    width: 100%;
    height: 400px;
@@ -132,11 +133,12 @@ h1 {
 .contact-form {
    margin: 0 5% 0 0;
    color: #fff;
-   background-color: rgba(0, 128, 128, 0.9);
-   max-width: 400px;
+   background-color: rgba(0, 128, 128, 0.8);
+   width: 400px;
    position: absolute;
    left: 5%;
-   padding: 30px;
+   top:100px;
+   padding: 20px;
    border-bottom-right-radius: var(--card-border-radius);
    border-bottom-left-radius: var(--card-border-radius);
 }
@@ -149,8 +151,8 @@ h1 {
    background: transparent;
    color: #fafafa;
    width: 100%;
-   min-height: 25px;
-   margin: 5px 0 20px 0;
+   min-height: 20px;
+   margin: 0px 0 10px 0;
    border: 1px solid #fafafa;
    border-radius: 2px;
 }
@@ -159,8 +161,7 @@ h1 {
    border-color: var(--secondary-color);
 }
 
-.join-button {
-   margin-top: 10px;
+.submit-button {
    border-radius: 2px;
    padding: 10px 10px 10px 10px;
    text-align: center;
@@ -173,7 +174,7 @@ h1 {
    cursor: pointer;
 }
 
-.join-button:hover {
+.submit-button:hover {
    background-color: var(--tertiary-color);
    color: white;
 }
