--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -34,7 +34,7 @@
 .home-card {
    width: 30%;
    max-height: 267px;
-   max-width: 500px;
+   max-width: 700px;
    display: inline-block;
    position: relative;
    overflow: hidden;
