--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -19,7 +19,7 @@
 }
 
 /* Small size screens */
-@media (max-width: 950px) {
+@media (max-width: 768px) {
    #logo {
       width:100%;
    }
@@ -71,7 +71,7 @@
 /* Mobile devices */
 @media (max-width: 768px) {
    .home-card {
-      width: 90%;
+      width: 95%;
    }
 
    .home-card h2, .card .card-icon {
@@ -86,7 +86,21 @@
       padding:0;
       background:none;
    }
+   
    .card {
       width: 90%;
+   }
+
+   .contact-content #hero {
+      background-position: right center;
+   }
+
+
+   .contact-form {
+      position:relative;
+      top:0;
+      left:0;
+      width:100%;
+      height:400px;
    }
 }
